# chebyshev-qec

./: README.md  pyproject.toml
src/chebyshev_qec/: __init__.py  adaptive.py  analysis.py  approximation.py  qec_models.py
tests/: test_adaptive.py  test_analysis.py  test_approximation.py  test_qec_models.py
