[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chebyshev-qec"
version = "0.1.0"
description = "Chebyshev Approximation for Quantum Error Correction"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
plot = [
    "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
